--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "memorize-mate",
   "version": "0.1.0",
+  "homepage": "https://obaranovskyi.github.io/memorize-mate",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,6 +11,9 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "gh-pages": "^6.1.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -20,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build"
   },
   "eslintConfig": {
     "extends": [
