--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "bcrypt": "^5.1.0",
+    "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,7 +37,9 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b dev -d build",
-    "push": "npm run deploy && git add . && git commit -m \"Auto commit\" && git push --force"
+    "push": "npm run deploy && git add . && git commit -m \"Auto commit\" && git push --force",
+    "be:start": "node server/index.js",
+    "dev": "node_modules/.bin/concurrently --names fe,be --prefix-colors 'magenta,green' --kill-others 'npm start' 'npm run be:start'"
   },
   "eslintConfig": {
     "extends": [
